--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -r ts-node src/server.ts"
+    "dev": "nodemon -r ts-node src/server.ts",
+    "lint": "eslint './src/**/*.{ts,tsx}'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@typescript-eslint/typescript-estree": "^8.15.0",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -27,9 +29,15 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.1",
     "@types/swagger-ui-express": "^4.1.7",
-    "eslint": "^9.15.0",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
+    "eslint": "^8.57.1",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.6.0",
     "globals": "^15.12.0",
-    "typescript": "^5.7.2",
+    "typescript": "^4.9.5",
     "typescript-eslint": "^8.15.0"
   }
 }
